<resources>
    <string name="app_name">Edhusk</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="order_id_mock" translatable="false"># 1234–5678</string>
    <string name="price" translatable="false">$25 - $10</string>
    <string name="requests_count_mock" translatable="false">5</string>
    <string name="Class_name" translatable="false">Class</string>
    <string name="board_name" translatable="false">CBSE</string>
    <string name="Board" translatable="false">Board</string>
    <string name="pledge_mock" translatable="false">$150</string>
    <string name="subject_logo" translatable="false">Subject</string>
    <string name="sender_badge" translatable="false">SENDER</string>
    <string name="client_name_mock" translatable="false">Edward Norton</string>
    <string name="rating_mock" translatable="false">(26)</string>
    <string name="from_badge" translatable="false">FROM</string>
    <string name="to_badge" translatable="false">TO</string>
    <string name="delivery_date_badge" translatable="false">DELIVERY DATE</string>
    <string name="delivery_time_mock" translatable="false">6:30 pm</string>
    <string name="delivery_date_mock" translatable="false">May 16, 2016</string>
    <string name="deadline_badge" translatable="false">REQUEST DEADLINE</string>
    <string name="deadline_time_mock" translatable="false">24 minutes</string>
    <string name="request_btn_text" translatable="false">REQUEST</string>
    <string name="btn_annotation_mock" translatable="false">5 people have sent a request</string>
    <string name="content_from1_mock">W 90th St</string>
    <string name="content_from2_mock">New York, NY 10025</string>
    <string name="content_to1_mock">46th Ave</string>
    <string name="content_to2_mock">Woodside, NY 11101</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="google_status_fmt">%s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="city_prompt">choose a city</string>

    <string-array name="city_array">
        <item>Jaipur</item>
    </string-array>

</resources>
