<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgContent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    >

    <!-- LEFT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_weight="3"
        android:background="#a41789f4"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/buttonPanel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/profile_image" />

        <TextView
            android:id="@+id/title_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="1-1"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/title_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/title_time_label"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/white"
            android:textSize="12sp" />


    </RelativeLayout>
    <!-- RIGHT TITLE PART -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fbfff9ef"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="15dp"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/title_from_to_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/line_vertical" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/title_from_to_dots"
            android:layout_marginTop="-5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:text="name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:ellipsize="marquee"
            android:text="address"

            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/title_from_to_dots_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:layout_below="@id/address"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/title_from_to_dots"
            android:src="@color/contentDividerLine" />




        <TextView
            android:id="@+id/app_bar_applied_text"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/class_logo"
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/app_bar_applied_text"
            android:layout_alignStart="@id/app_bar_applied_text"
            android:text="@string/Class_name" />

        <TextView
            android:id="@+id/board_name"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/board_name" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/board_name"
            android:layout_alignStart="@id/board_name"
            android:text="@string/Board" />

        <TextView
            android:id="@+id/app_bar_verified_text"
            style="@style/TitleBadgeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <TextView
            style="@style/TitleBadgeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/app_bar_verified_text"
            android:layout_alignEnd="@+id/app_bar_verified_text"
            android:text="@string/subject_logo" />

    </RelativeLayout>
</LinearLayout>